# harness-for-harness

./: README.md
New project/: README.md  pyproject.toml
New project/examples/: metrics.json  task.md
New project/harness_agent/: __init__.py  cli.py  config.py  evaluator.py  llm.py  loop.py  prompts.py  proposal.py  workspace.py
New project/tests/: test_evaluator.py  test_loop.py  test_proposal.py  test_workspace.py
