[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-engineering-agent"
version = "0.1.0"
description = "Closed-loop agent for generating and tuning harness engineering code with LLM feedback."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Harness Engineering Agent" }]
dependencies = []

[project.scripts]
harness-agent = "harness_agent.cli:main"

[tool.setuptools.packages.find]
include = ["harness_agent*"]
